updated about page
added bio

--- a/about.html
+++ b/about.html
@@ -32,11 +32,22 @@
 
   <section class="banner">
     <div>
-      <h2>About Me</h2>
+      <h1>About Me</h1>
 	  <hr>
 
 	  <div class="paragraph">
-        <h2>[ ENTER DESCRIPTION HERE ]</h2>
+                <h2>Welcome to my little corner of the world wide web! I'm Arunika, a Master's student at UT Arlington 
+            majoring in Computer Science. I chose Software Engineering as my specialty track in the program, 
+			because I absolutely love the concept of taking an abstract idea and turning it into a fully functioning, tangible 
+			piece of software ready to make a difference somewhere, somehow.</h2>
+	    <br>
+	    <h2>I love spending my free time working on personal coding projects that fit with my unique lifestyle needs,
+		such as a desktop app to keep track of my productivity (yes, I am a proud and happy workaholic!) or an android app 
+		for my roommate and I to log in our daily expenses on a shared platform, etc. </h2>
+		<br>
+		<h2>I am currently looking for the perfect summer internship, one where I can work on creative, meaningful projects, surrounded by
+		by bright minds who can guide me along the way and help me become a better coder and a more capable individual!
+		</h2>
 	  </div>
 	  
     </div>
